--- a/apps/watchtower/docker-compose.yml
+++ b/apps/watchtower/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   watchtower:
-    image: containrrr/watchtower:latest
+    image: beatkind/watchtower:latest
     container_name: watchtower
     command: ${WATCHTOWER_EXTRA_ARGS}
     environment:
