--- a/apps/watchtower/config.json
+++ b/apps/watchtower/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Watchtower+",
+  "name": "Watchtower",
   "id": "watchtower",
   "available": true,
   "exposable": false,
