--- a/apps/watchtower/config.json
+++ b/apps/watchtower/config.json
@@ -50,18 +50,10 @@
       "required": false
     },
     {
-      "type": "boolean",
-      "label": "Enable label filtering",
-      "hint": "Only update containers with com.centurylinklabs.watchtower.enable=true label",
-      "env_variable": "WATCHTOWER_LABEL_ENABLE",
-      "default": false,
-      "required": false
-    },
-    {
       "type": "text",
-      "label": "Custom label selector",
-      "hint": "Custom label like 'runtipi.managed=true' (overrides official boolean if set)",
-      "env_variable": "WATCHTOWER_CUSTOM_LABEL",
+      "label": "Label selector",
+      "hint": "Containers with this label=true will be watched. Use 'runtipi.managed=true' for Runtipi apps or 'com.centurylinklabs.watchtower.enable=true' for official Watchtower label. Leave empty to watch ALL containers.",
+      "env_variable": "WATCHTOWER_LABEL_ENABLE",
       "default": "runtipi.managed=true",
       "required": false
     },
