--- a/apps/aiostreams/docker-compose.yml
+++ b/apps/aiostreams/docker-compose.yml
@@ -5,8 +5,123 @@ services:
     image: ghcr.io/viren070/aiostreams:latest
     container_name: aiostreams
     restart: unless-stopped
-    env_file:
-      - ${APP_DATA_DIR}/aiostreams/app.env
+    environment:
+      # Basic Configuration
+      ADDON_NAME: "${ADDON_NAME-AIOStreams}"
+      ADDON_ID: "${ADDON_ID-aiostreams.viren070.com}"
+      DETERMINISTIC_ADDON_ID: "${DETERMINISTIC_ADDON_ID-true}"
+      PORT: "${PORT-3000}"
+      SECRET_KEY: "${SECRET_KEY}"
+      API_KEY: "${API_KEY}"
+      SHOW_DIE: "${SHOW_DIE-false}"
+      
+      # Logging Configuration
+      LOG_LEVEL: "${LOG_LEVEL-info}"
+      LOG_FORMAT: "${LOG_FORMAT-text}"
+      LOG_SENSITIVE_INFO: "${LOG_SENSITIVE_INFO-true}"
+      
+      # Proxy Configuration
+      ADDON_PROXY: "${ADDON_PROXY}"
+      ADDON_PROXY_CONFIG: "${ADDON_PROXY_CONFIG}"
+      
+      # Limits
+      MAX_ADDONS: "${MAX_ADDONS-15}"
+      MAX_KEYWORD_FILTERS: "${MAX_KEYWORD_FILTERS-30}"
+      MAX_REGEX_SORT_PATTERNS: "${MAX_REGEX_SORT_PATTERNS-30}"
+      MAX_MOVIE_SIZE: "${MAX_MOVIE_SIZE-161061273600}"
+      MAX_EPISODE_SIZE: "${MAX_EPISODE_SIZE-161061273600}"
+      MAX_TIMEOUT: "${MAX_TIMEOUT-50000}"
+      MIN_TIMEOUT: "${MIN_TIMEOUT-1000}"
+      DEFAULT_TIMEOUT: "${DEFAULT_TIMEOUT-15000}"
+      
+      # Default Regex Patterns
+      DEFAULT_REGEX_EXCLUDE_PATTERN: "${DEFAULT_REGEX_EXCLUDE_PATTERN}"
+      DEFAULT_REGEX_INCLUDE_PATTERN: "${DEFAULT_REGEX_INCLUDE_PATTERN}"
+      DEFAULT_REGEX_SORT_PATTERNS: "${DEFAULT_REGEX_SORT_PATTERNS}"
+      
+      # MediaFlow Configuration
+      MEDIAFLOW_IP_TIMEOUT: "${MEDIAFLOW_IP_TIMEOUT-30000}"
+      DEFAULT_MEDIAFLOW_URL: "${DEFAULT_MEDIAFLOW_URL-https://mediaflow.elfhosted.com/}"
+      DEFAULT_MEDIAFLOW_API_PASSWORD: "${DEFAULT_MEDIAFLOW_API_PASSWORD}"
+      DEFAULT_MEDIAFLOW_PUBLIC_IP: "${DEFAULT_MEDIAFLOW_PUBLIC_IP}"
+      ENCRYPT_MEDIAFLOW_URLS: "${ENCRYPT_MEDIAFLOW_URLS-true}"
+      
+      # StremThru Configuration
+      STREMTHRU_TIMEOUT: "${STREMTHRU_TIMEOUT-30000}"
+      DEFAULT_STREMTHRU_URL: "${DEFAULT_STREMTHRU_URL}"
+      DEFAULT_STREMTHRU_CREDENTIAL: "${DEFAULT_STREMTHRU_CREDENTIAL}"
+      DEFAULT_STREMTHRU_PUBLIC_IP: "${DEFAULT_STREMTHRU_PUBLIC_IP}"
+      ENCRYPT_STREMTHRU_URLS: "${ENCRYPT_STREMTHRU_URLS-true}"
+      
+      # Comet Configuration
+      COMET_URL: "${COMET_URL-https://comet.elfhosted.com/}"
+      DEFAULT_COMET_TIMEOUT: "${DEFAULT_COMET_TIMEOUT}"
+      FORCE_COMET_HOSTNAME: "${FORCE_COMET_HOSTNAME}"
+      FORCE_COMET_PORT: "${FORCE_COMET_PORT}"
+      FORCE_COMET_PROTOCOL: "${FORCE_COMET_PROTOCOL}"
+      
+      # MediaFusion Configuration
+      MEDIAFUSION_URL: "${MEDIAFUSION_URL-https://mediafusion.elfhosted.com/}"
+      DEFAULT_MEDIAFUSION_TIMEOUT: "${DEFAULT_MEDIAFUSION_TIMEOUT}"
+      MEDIAFUSION_CONFIG_TIMEOUT: "${MEDIAFUSION_CONFIG_TIMEOUT-5000}"
+      MEDIAFUSION_API_PASSWORD: "${MEDIAFUSION_API_PASSWORD}"
+      
+      # JackettIO Configuration
+      JACKETTIO_URL: "${JACKETTIO_URL-https://jackettio.elfhosted.com/}"
+      DEFAULT_JACKETTIO_INDEXERS: "${DEFAULT_JACKETTIO_INDEXERS-[\"bitsearch\",\"eztv\",\"thepiratebay\",\"therarbg\",\"yts\"]}"
+      DEFAULT_JACKETTIO_TIMEOUT: "${DEFAULT_JACKETTIO_TIMEOUT}"
+      DEFAULT_JACKETTIO_STREMTHRU_URL: "${DEFAULT_JACKETTIO_STREMTHRU_URL-https://stremthru.13377001.xyz}"
+      FORCE_JACKETTIO_HOSTNAME: "${FORCE_JACKETTIO_HOSTNAME}"
+      FORCE_JACKETTIO_PORT: "${FORCE_JACKETTIO_PORT}"
+      FORCE_JACKETTIO_PROTOCOL: "${FORCE_JACKETTIO_PROTOCOL}"
+      
+      # Stremio-Jackett Configuration
+      STREMIO_JACKETT_URL: "${STREMIO_JACKETT_URL-https://stremio-jackett.elfhosted.com/}"
+      DEFAULT_STREMIO_JACKETT_JACKETT_URL: "${DEFAULT_STREMIO_JACKETT_JACKETT_URL}"
+      DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY: "${DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY}"
+      DEFAULT_STREMIO_JACKETT_TMDB_API_KEY: "${DEFAULT_STREMIO_JACKETT_TMDB_API_KEY}"
+      DEFAULT_STREMIO_JACKETT_TIMEOUT: "${DEFAULT_STREMIO_JACKETT_TIMEOUT}"
+      
+      # StremThru Store Configuration
+      STREMTHRU_STORE_URL: "${STREMTHRU_STORE_URL-https://stremthru.elfhosted.com/stremio/store/}"
+      DEFAULT_STREMTHRU_STORE_TIMEOUT: "${DEFAULT_STREMTHRU_STORE_TIMEOUT-15000}"
+      
+      # Torrentio Configuration
+      TORRENTIO_URL: "${TORRENTIO_URL-https://torrentio.strem.fun/}"
+      DEFAULT_TORRENTIO_TIMEOUT: "${DEFAULT_TORRENTIO_TIMEOUT}"
+      
+      # TorBox Configuration
+      TORBOX_STREMIO_URL: "${TORBOX_STREMIO_URL-https://stremio.torbox.app/}"
+      DEFAULT_TORBOX_STREMIO_TIMEOUT: "${DEFAULT_TORBOX_STREMIO_TIMEOUT}"
+      
+      # Peerflix Configuration
+      PEERFLIX_URL: "${PEERFLIX_URL-https://peerflix-addon.onrender.com/}"
+      DEFAULT_PEERFLIX_TIMEOUT: "${DEFAULT_PEERFLIX_TIMEOUT}"
+      
+      # Easynews+ Configuration
+      EASYNEWS_PLUS_URL: "${EASYNEWS_PLUS_URL-https://b89262c192b0-stremio-easynews-addon.baby-beamup.club/}"
+      DEFAULT_EASYNEWS_PLUS_TIMEOUT: "${DEFAULT_EASYNEWS_PLUS_TIMEOUT}"
+      
+      # Easynews++ Configuration
+      EASYNEWS_PLUS_PLUS_URL: "${EASYNEWS_PLUS_PLUS_URL-https://easynews-cloudflare-worker.jqrw92fchz.workers.dev/}"
+      DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT: "${DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT}"
+      
+      # Orion Configuration
+      ORION_STREMIO_ADDON_URL: "${ORION_STREMIO_ADDON_URL-https://5a0d1888fa64-orion.baby-beamup.club/}"
+      DEFAULT_ORION_STREMIO_ADDON_TIMEOUT: "${DEFAULT_ORION_STREMIO_ADDON_TIMEOUT}"
+      
+      # Easynews Configuration
+      EASYNEWS_URL: "${EASYNEWS_URL-https://ea627ddf0ee7-easynews.baby-beamup.club/}"
+      DEFAULT_EASYNEWS_TIMEOUT: "${DEFAULT_EASYNEWS_TIMEOUT}"
+      
+      # Debridio Configuration
+      DEBRIDIO_URL: "${DEBRIDIO_URL-https://debridio.adobotec.com/}"
+      DEFAULT_DEBRIDIO_TIMEOUT: "${DEFAULT_DEBRIDIO_TIMEOUT}"
+      
+      # Other Service Timeouts
+      DEFAULT_DMM_CAST_TIMEOUT: "${DEFAULT_DMM_CAST_TIMEOUT}"
+      DEFAULT_STREMIO_GDRIVE_TIMEOUT: "${DEFAULT_STREMIO_GDRIVE_TIMEOUT}"
+      
     healthcheck:
       test: ["CMD-SHELL","wget -qO- http://localhost:3000/health || exit 1"]
       interval: 1m
