--- a/apps/aiostreams/docker-compose.yml
+++ b/apps/aiostreams/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       ADDON_ID: "${ADDON_ID-aiostreams.viren070.com}"
       DETERMINISTIC_ADDON_ID: "${DETERMINISTIC_ADDON_ID-true}"
       PORT: "${PORT-3000}"
-      SECRET_KEY: "${SECRET_KEY}"
-      API_KEY: "${API_KEY}"
+      SECRET_KEY: "${SECRET_KEY-}"
+      API_KEY: "${API_KEY-}"
       SHOW_DIE: "${SHOW_DIE-false}"
       
       # Logging Configuration
@@ -21,8 +21,8 @@ services:
       LOG_SENSITIVE_INFO: "${LOG_SENSITIVE_INFO-true}"
       
       # Proxy Configuration
-      ADDON_PROXY: "${ADDON_PROXY}"
-      ADDON_PROXY_CONFIG: "${ADDON_PROXY_CONFIG}"
+      ADDON_PROXY: "${ADDON_PROXY-}"
+      ADDON_PROXY_CONFIG: "${ADDON_PROXY_CONFIG-}"
       
       # Limits
       MAX_ADDONS: "${MAX_ADDONS-15}"
@@ -35,52 +35,52 @@ services:
       DEFAULT_TIMEOUT: "${DEFAULT_TIMEOUT-15000}"
       
       # Default Regex Patterns
-      DEFAULT_REGEX_EXCLUDE_PATTERN: "${DEFAULT_REGEX_EXCLUDE_PATTERN}"
-      DEFAULT_REGEX_INCLUDE_PATTERN: "${DEFAULT_REGEX_INCLUDE_PATTERN}"
-      DEFAULT_REGEX_SORT_PATTERNS: "${DEFAULT_REGEX_SORT_PATTERNS}"
+      DEFAULT_REGEX_EXCLUDE_PATTERN: "${DEFAULT_REGEX_EXCLUDE_PATTERN-}"
+      DEFAULT_REGEX_INCLUDE_PATTERN: "${DEFAULT_REGEX_INCLUDE_PATTERN-}"
+      DEFAULT_REGEX_SORT_PATTERNS: "${DEFAULT_REGEX_SORT_PATTERNS-}"
       
       # MediaFlow Configuration
       MEDIAFLOW_IP_TIMEOUT: "${MEDIAFLOW_IP_TIMEOUT-30000}"
       DEFAULT_MEDIAFLOW_URL: "${DEFAULT_MEDIAFLOW_URL-https://mediaflow.elfhosted.com/}"
-      DEFAULT_MEDIAFLOW_API_PASSWORD: "${DEFAULT_MEDIAFLOW_API_PASSWORD}"
-      DEFAULT_MEDIAFLOW_PUBLIC_IP: "${DEFAULT_MEDIAFLOW_PUBLIC_IP}"
+      DEFAULT_MEDIAFLOW_API_PASSWORD: "${DEFAULT_MEDIAFLOW_API_PASSWORD-}"
+      DEFAULT_MEDIAFLOW_PUBLIC_IP: "${DEFAULT_MEDIAFLOW_PUBLIC_IP-}"
       ENCRYPT_MEDIAFLOW_URLS: "${ENCRYPT_MEDIAFLOW_URLS-true}"
       
       # StremThru Configuration
       STREMTHRU_TIMEOUT: "${STREMTHRU_TIMEOUT-30000}"
-      DEFAULT_STREMTHRU_URL: "${DEFAULT_STREMTHRU_URL}"
-      DEFAULT_STREMTHRU_CREDENTIAL: "${DEFAULT_STREMTHRU_CREDENTIAL}"
-      DEFAULT_STREMTHRU_PUBLIC_IP: "${DEFAULT_STREMTHRU_PUBLIC_IP}"
+      DEFAULT_STREMTHRU_URL: "${DEFAULT_STREMTHRU_URL-}"
+      DEFAULT_STREMTHRU_CREDENTIAL: "${DEFAULT_STREMTHRU_CREDENTIAL-}"
+      DEFAULT_STREMTHRU_PUBLIC_IP: "${DEFAULT_STREMTHRU_PUBLIC_IP-}"
       ENCRYPT_STREMTHRU_URLS: "${ENCRYPT_STREMTHRU_URLS-true}"
       
       # Comet Configuration
       COMET_URL: "${COMET_URL-https://comet.elfhosted.com/}"
-      DEFAULT_COMET_TIMEOUT: "${DEFAULT_COMET_TIMEOUT}"
-      FORCE_COMET_HOSTNAME: "${FORCE_COMET_HOSTNAME}"
-      FORCE_COMET_PORT: "${FORCE_COMET_PORT}"
-      FORCE_COMET_PROTOCOL: "${FORCE_COMET_PROTOCOL}"
+      DEFAULT_COMET_TIMEOUT: "${DEFAULT_COMET_TIMEOUT-15000}"
+      FORCE_COMET_HOSTNAME: "${FORCE_COMET_HOSTNAME-}"
+      FORCE_COMET_PORT: "${FORCE_COMET_PORT-}"
+      FORCE_COMET_PROTOCOL: "${FORCE_COMET_PROTOCOL-}"
       
       # MediaFusion Configuration
       MEDIAFUSION_URL: "${MEDIAFUSION_URL-https://mediafusion.elfhosted.com/}"
-      DEFAULT_MEDIAFUSION_TIMEOUT: "${DEFAULT_MEDIAFUSION_TIMEOUT}"
+      DEFAULT_MEDIAFUSION_TIMEOUT: "${DEFAULT_MEDIAFUSION_TIMEOUT-15000}"
       MEDIAFUSION_CONFIG_TIMEOUT: "${MEDIAFUSION_CONFIG_TIMEOUT-5000}"
-      MEDIAFUSION_API_PASSWORD: "${MEDIAFUSION_API_PASSWORD}"
+      MEDIAFUSION_API_PASSWORD: "${MEDIAFUSION_API_PASSWORD-}"
       
       # JackettIO Configuration
       JACKETTIO_URL: "${JACKETTIO_URL-https://jackettio.elfhosted.com/}"
       DEFAULT_JACKETTIO_INDEXERS: "${DEFAULT_JACKETTIO_INDEXERS-[\"bitsearch\",\"eztv\",\"thepiratebay\",\"therarbg\",\"yts\"]}"
-      DEFAULT_JACKETTIO_TIMEOUT: "${DEFAULT_JACKETTIO_TIMEOUT}"
+      DEFAULT_JACKETTIO_TIMEOUT: "${DEFAULT_JACKETTIO_TIMEOUT-15000}"
       DEFAULT_JACKETTIO_STREMTHRU_URL: "${DEFAULT_JACKETTIO_STREMTHRU_URL-https://stremthru.13377001.xyz}"
-      FORCE_JACKETTIO_HOSTNAME: "${FORCE_JACKETTIO_HOSTNAME}"
-      FORCE_JACKETTIO_PORT: "${FORCE_JACKETTIO_PORT}"
-      FORCE_JACKETTIO_PROTOCOL: "${FORCE_JACKETTIO_PROTOCOL}"
+      FORCE_JACKETTIO_HOSTNAME: "${FORCE_JACKETTIO_HOSTNAME-}"
+      FORCE_JACKETTIO_PORT: "${FORCE_JACKETTIO_PORT-}"
+      FORCE_JACKETTIO_PROTOCOL: "${FORCE_JACKETTIO_PROTOCOL-}"
       
       # Stremio-Jackett Configuration
       STREMIO_JACKETT_URL: "${STREMIO_JACKETT_URL-https://stremio-jackett.elfhosted.com/}"
-      DEFAULT_STREMIO_JACKETT_JACKETT_URL: "${DEFAULT_STREMIO_JACKETT_JACKETT_URL}"
-      DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY: "${DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY}"
-      DEFAULT_STREMIO_JACKETT_TMDB_API_KEY: "${DEFAULT_STREMIO_JACKETT_TMDB_API_KEY}"
-      DEFAULT_STREMIO_JACKETT_TIMEOUT: "${DEFAULT_STREMIO_JACKETT_TIMEOUT}"
+      DEFAULT_STREMIO_JACKETT_JACKETT_URL: "${DEFAULT_STREMIO_JACKETT_JACKETT_URL-}"
+      DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY: "${DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY-}"
+      DEFAULT_STREMIO_JACKETT_TMDB_API_KEY: "${DEFAULT_STREMIO_JACKETT_TMDB_API_KEY-}"
+      DEFAULT_STREMIO_JACKETT_TIMEOUT: "${DEFAULT_STREMIO_JACKETT_TIMEOUT-15000}"
       
       # StremThru Store Configuration
       STREMTHRU_STORE_URL: "${STREMTHRU_STORE_URL-https://stremthru.elfhosted.com/stremio/store/}"
@@ -88,39 +88,39 @@ services:
       
       # Torrentio Configuration
       TORRENTIO_URL: "${TORRENTIO_URL-https://torrentio.strem.fun/}"
-      DEFAULT_TORRENTIO_TIMEOUT: "${DEFAULT_TORRENTIO_TIMEOUT}"
+      DEFAULT_TORRENTIO_TIMEOUT: "${DEFAULT_TORRENTIO_TIMEOUT-15000}"
       
       # TorBox Configuration
       TORBOX_STREMIO_URL: "${TORBOX_STREMIO_URL-https://stremio.torbox.app/}"
-      DEFAULT_TORBOX_STREMIO_TIMEOUT: "${DEFAULT_TORBOX_STREMIO_TIMEOUT}"
+      DEFAULT_TORBOX_STREMIO_TIMEOUT: "${DEFAULT_TORBOX_STREMIO_TIMEOUT-15000}"
       
       # Peerflix Configuration
       PEERFLIX_URL: "${PEERFLIX_URL-https://peerflix-addon.onrender.com/}"
-      DEFAULT_PEERFLIX_TIMEOUT: "${DEFAULT_PEERFLIX_TIMEOUT}"
+      DEFAULT_PEERFLIX_TIMEOUT: "${DEFAULT_PEERFLIX_TIMEOUT-15000}"
       
       # Easynews+ Configuration
       EASYNEWS_PLUS_URL: "${EASYNEWS_PLUS_URL-https://b89262c192b0-stremio-easynews-addon.baby-beamup.club/}"
-      DEFAULT_EASYNEWS_PLUS_TIMEOUT: "${DEFAULT_EASYNEWS_PLUS_TIMEOUT}"
+      DEFAULT_EASYNEWS_PLUS_TIMEOUT: "${DEFAULT_EASYNEWS_PLUS_TIMEOUT-15000}"
       
       # Easynews++ Configuration
       EASYNEWS_PLUS_PLUS_URL: "${EASYNEWS_PLUS_PLUS_URL-https://easynews-cloudflare-worker.jqrw92fchz.workers.dev/}"
-      DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT: "${DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT}"
+      DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT: "${DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT-15000}"
       
       # Orion Configuration
       ORION_STREMIO_ADDON_URL: "${ORION_STREMIO_ADDON_URL-https://5a0d1888fa64-orion.baby-beamup.club/}"
-      DEFAULT_ORION_STREMIO_ADDON_TIMEOUT: "${DEFAULT_ORION_STREMIO_ADDON_TIMEOUT}"
+      DEFAULT_ORION_STREMIO_ADDON_TIMEOUT: "${DEFAULT_ORION_STREMIO_ADDON_TIMEOUT-15000}"
       
       # Easynews Configuration
       EASYNEWS_URL: "${EASYNEWS_URL-https://ea627ddf0ee7-easynews.baby-beamup.club/}"
-      DEFAULT_EASYNEWS_TIMEOUT: "${DEFAULT_EASYNEWS_TIMEOUT}"
+      DEFAULT_EASYNEWS_TIMEOUT: "${DEFAULT_EASYNEWS_TIMEOUT-15000}"
       
       # Debridio Configuration
       DEBRIDIO_URL: "${DEBRIDIO_URL-https://debridio.adobotec.com/}"
-      DEFAULT_DEBRIDIO_TIMEOUT: "${DEFAULT_DEBRIDIO_TIMEOUT}"
+      DEFAULT_DEBRIDIO_TIMEOUT: "${DEFAULT_DEBRIDIO_TIMEOUT-15000}"
       
       # Other Service Timeouts
-      DEFAULT_DMM_CAST_TIMEOUT: "${DEFAULT_DMM_CAST_TIMEOUT}"
-      DEFAULT_STREMIO_GDRIVE_TIMEOUT: "${DEFAULT_STREMIO_GDRIVE_TIMEOUT}"
+      DEFAULT_DMM_CAST_TIMEOUT: "${DEFAULT_DMM_CAST_TIMEOUT-15000}"
+      DEFAULT_STREMIO_GDRIVE_TIMEOUT: "${DEFAULT_STREMIO_GDRIVE_TIMEOUT-15000}"
       
     healthcheck:
       test: ["CMD-SHELL","wget -qO- http://localhost:3000/health || exit 1"]
