--- a/apps/aiostreams/docker-compose.yml
+++ b/apps/aiostreams/docker-compose.yml
@@ -56,9 +56,9 @@ services:
       # Comet Configuration
       COMET_URL: "${COMET_URL-https://comet.elfhosted.com/}"
       DEFAULT_COMET_TIMEOUT: "${DEFAULT_COMET_TIMEOUT-15000}"
-      FORCE_COMET_HOSTNAME: "${FORCE_COMET_HOSTNAME-}"
-      FORCE_COMET_PORT: "${FORCE_COMET_PORT-}"
-      FORCE_COMET_PROTOCOL: "${FORCE_COMET_PROTOCOL-}"
+      # FORCE_COMET_HOSTNAME: "${FORCE_COMET_HOSTNAME}"
+      FORCE_COMET_PORT: "${FORCE_COMET_PORT}"
+      # FORCE_COMET_PROTOCOL: "${FORCE_COMET_PROTOCOL}"
       
       # MediaFusion Configuration
       MEDIAFUSION_URL: "${MEDIAFUSION_URL-https://mediafusion.elfhosted.com/}"
@@ -71,9 +71,9 @@ services:
       DEFAULT_JACKETTIO_INDEXERS: "${DEFAULT_JACKETTIO_INDEXERS-[\"bitsearch\",\"eztv\",\"thepiratebay\",\"therarbg\",\"yts\"]}"
       DEFAULT_JACKETTIO_TIMEOUT: "${DEFAULT_JACKETTIO_TIMEOUT-15000}"
       DEFAULT_JACKETTIO_STREMTHRU_URL: "${DEFAULT_JACKETTIO_STREMTHRU_URL-https://stremthru.13377001.xyz}"
-      FORCE_JACKETTIO_HOSTNAME: "${FORCE_JACKETTIO_HOSTNAME-}"
+      # FORCE_JACKETTIO_HOSTNAME: "${FORCE_JACKETTIO_HOSTNAME}"
       FORCE_JACKETTIO_PORT: "${FORCE_JACKETTIO_PORT-}"
-      FORCE_JACKETTIO_PROTOCOL: "${FORCE_JACKETTIO_PROTOCOL-}"
+      # FORCE_JACKETTIO_PROTOCOL: "${FORCE_JACKETTIO_PROTOCOL}"
       
       # Stremio-Jackett Configuration
       STREMIO_JACKETT_URL: "${STREMIO_JACKETT_URL-https://stremio-jackett.elfhosted.com/}"
