--- a/apps/aiostreams/config.json
+++ b/apps/aiostreams/config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../app-info-schema.json",
   "id": "aiostreams",
-  "name": "AIOStreams",
+  "name": "AIOStreams+",
   "version": "latest",
   "tipi_version": 1,
   "available": true,
