--- a/apps/stremthru/docker-compose.yml
+++ b/apps/stremthru/docker-compose.yml
@@ -5,14 +5,27 @@ services:
     container_name: stremthru
     image: muniftanjim/stremthru:latest
     environment:
+      - STREMTHRU_BASE_URL=${STREMTHRU_BASE_URL}
+      - STREMTHRU_PORT=${STREMTHRU_PORT:-8080}
+      - STREMTHRU_LOG_LEVEL=${STREMTHRU_LOG_LEVEL:-INFO}
+      - STREMTHRU_LOG_FORMAT=${STREMTHRU_LOG_FORMAT:-json}
+      - STREMTHRU_DATA_DIR=${STREMTHRU_DATA_DIR:-/app/data}
       - STREMTHRU_HTTP_PROXY=${STREMTHRU_HTTP_PROXY}
       - STREMTHRU_TUNNEL=${STREMTHRU_TUNNEL}
       - STREMTHRU_PROXY_AUTH=${STREMTHRU_PROXY_AUTH}
+      - STREMTHRU_AUTH_ADMIN=${STREMTHRU_AUTH_ADMIN}
       - STREMTHRU_STORE_AUTH=${STREMTHRU_STORE_AUTH}
+      - STREMTHRU_STORE_TUNNEL=${STREMTHRU_STORE_TUNNEL}
+      - STREMTHRU_STORE_CONTENT_PROXY=${STREMTHRU_STORE_CONTENT_PROXY}
+      - STREMTHRU_CONTENT_PROXY_CONNECTION_LIMIT=${STREMTHRU_CONTENT_PROXY_CONNECTION_LIMIT}
+      - STREMTHRU_STORE_CONTENT_CACHED_STALE_TIME=${STREMTHRU_STORE_CONTENT_CACHED_STALE_TIME}
       - STREMTHRU_PEER_URI=${STREMTHRU_PEER_URI}
       - STREMTHRU_REDIS_URI=${STREMTHRU_REDIS_URI}
       - STREMTHRU_DATABASE_URI=${STREMTHRU_DATABASE_URI:-sqlite://./data/stremthru.db}
       - STREMTHRU_STREMIO_ADDON=${STREMTHRU_STREMIO_ADDON}
+      - STREMTHRU_INTEGRATION_TRAKT_CLIENT_ID=${STREMTHRU_INTEGRATION_TRAKT_CLIENT_ID}
+      - STREMTHRU_INTEGRATION_TRAKT_CLIENT_SECRET=${STREMTHRU_INTEGRATION_TRAKT_CLIENT_SECRET}
+      - STREMTHRU_FEATURE=${STREMTHRU_FEATURE}
     restart: unless-stopped
     volumes:
       - ${APP_DATA_DIR}/data/stremthru:/app/data
