--- a/apps/aiostreams/config.json
+++ b/apps/aiostreams/config.json
@@ -49,13 +49,12 @@
       "hint": "Port on which the addon listens."
     },
     {
-      "type": "random",
-      "label": "Secret Key",
+      "type": "password",
+      "label": "Secret Key (64-hex chars)",
       "env_variable": "SECRET_KEY",
-      "encoding": "hex",
-      "min": 64,
-      "required": true,
-      "hint": "Auto-generated 64-character hex string for config encryption"
+      "placeholder": "(no auto-generated if blank)",
+      "hint": "64-char hex string to encrypt config; generate via openssl rand -hex 32.",
+      "required": true
     },
     {
       "type": "text",
