--- a/apps/aiostreams/docker-compose.yml
+++ b/apps/aiostreams/docker-compose.yml
@@ -41,9 +41,9 @@ services:
       
       # MediaFlow Configuration
       MEDIAFLOW_IP_TIMEOUT: "${MEDIAFLOW_IP_TIMEOUT-30000}"
-      DEFAULT_MEDIAFLOW_URL: "${DEFAULT_MEDIAFLOW_URL-https://mediaflow.elfhosted.com/}"
-      DEFAULT_MEDIAFLOW_API_PASSWORD: "${DEFAULT_MEDIAFLOW_API_PASSWORD-}"
-      DEFAULT_MEDIAFLOW_PUBLIC_IP: "${DEFAULT_MEDIAFLOW_PUBLIC_IP-}"
+      # DEFAULT_MEDIAFLOW_URL: "${DEFAULT_MEDIAFLOW_URL-https://mediaflow.example.com/}"   -> ADD to compose.json: "DEFAULT_MEDIAFLOW_URL": "${DEFAULT_MEDIAFLOW_URL}",
+      # DEFAULT_MEDIAFLOW_API_PASSWORD: "${DEFAULT_MEDIAFLOW_API_PASSWORD-}"   -> ADD to compose.json: "DEFAULT_MEDIAFLOW_API_PASSWORD": "${DEFAULT_MEDIAFLOW_API_PASSWORD}",
+      # DEFAULT_MEDIAFLOW_PUBLIC_IP: "${DEFAULT_MEDIAFLOW_PUBLIC_IP-}"   -> ADD to compose.json: "DEFAULT_MEDIAFLOW_PUBLIC_IP": "${DEFAULT_MEDIAFLOW_PUBLIC_IP}",
       ENCRYPT_MEDIAFLOW_URLS: "${ENCRYPT_MEDIAFLOW_URLS-true}"
       
       # StremThru Configuration
