--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   n8n-1:
-    container_name: n8n-1
-    image: n8nio/n8n:1.97.0
+    container_name: n8n
+    image: n8nio/n8n:latest
     restart: unless-stopped
     ports:
       - ${APP_PORT}:5678
