--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -1,4 +1,13 @@
 services:
+  n8n-init:
+    container_name: n8n-init
+    image: alpine:3.20
+    command: ["sh", "-c", "chown -R 1000:1000 /home/node/.n8n && chmod -R 755 /home/node/.n8n"]
+    volumes:
+      - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
+    labels:
+      runtipi.managed: true
+
   n8n:
     container_name: n8n
     image: n8nio/n8n:latest
@@ -18,6 +27,9 @@ services:
       - DB_POSTGRESDB_USER=n8n
       - DB_POSTGRESDB_PASSWORD=${N8N_NR_DB_PASSWORD}
       - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
+      - N8N_LOG_LEVEL=info
+      - N8N_METRICS=false
+      - N8N_DISABLE_PRODUCTION_MAIN_PROCESS=true
     networks:
       - tipi_main_network
     links:
@@ -48,9 +60,10 @@ services:
       traefik.http.routers.n8n-local.service: n8n
       traefik.http.routers.n8n-local.tls: true
       runtipi.managed: true
+
   n8n-db:
     container_name: n8n-db
-    image: postgres:11
+    image: postgres:16.4-alpine
     restart: unless-stopped
     networks:
       - tipi_main_network
@@ -60,6 +73,7 @@ services:
       - POSTGRES_DB=n8n
       - POSTGRES_NON_ROOT_USER=n8n
       - POSTGRES_NON_ROOT_PASSWORD=${N8N_NR_DB_PASSWORD}
+      - POSTGRES_INITDB_ARGS=--auth-local=trust --auth-host=scram-sha-256
     volumes:
       - ${APP_DATA_DIR}/data/postgres:/var/lib/postgresql/data
       - ${APP_DATA_DIR}/data/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
@@ -67,18 +81,13 @@ services:
       test:
         - CMD-SHELL
         - pg_isready -h localhost -U $$POSTGRES_USER -d $$POSTGRES_DB
-      interval: 5s
+      interval: 10s
       timeout: 5s
-      retries: 10
+      retries: 5
+      start_period: 30s
     labels:
       runtipi.managed: true
-  n8n-init:
-    image: bash:5.2.37
-    command:
-      - sh
-      - '-c'
-      - chown -R 1000:1000 /home/node/.n8n
-    volumes:
-      - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
-    labels:
-      runtipi.managed: true
+
+networks:
+  tipi_main_network:
+    external: true
