--- a/apps/n8n/config.json
+++ b/apps/n8n/config.json
@@ -30,6 +30,5 @@
   ],
   "supported_architectures": ["arm64", "amd64"],
   "created_at": 1691943801422,
-  "updated_at": 1748992202212,
-  "min_tipi_version": "3.0.0"
+  "updated_at": 1748992202212
 }
