--- a/apps/n8n/config.json
+++ b/apps/n8n/config.json
@@ -1,13 +1,13 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "n8n+",
+  "name": "n8n",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
   "port": 8215,
-  "id": "n8n",
+  "id": "n8n-1",
   "tipi_version": 18,
-  "version": "latest",
+  "version": "1.97.0",
   "categories": ["automation"],
   "description": "n8n is an extendable workflow automation tool. With a fair-code distribution model, n8n will always have visible source code, be available to self-host, and allow you to add your own custom functions, logic and apps. n8n's node-based approach makes it highly versatile, enabling you to connect anything to everything.",
   "short_desc": "Workflow Automation Tool. Alternative to Zapier",
