--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  n8n:
-    container_name: n8n
-    image: n8nio/n8n:latest
+  n8n-1:
+    container_name: n8n-1
+    image: n8nio/n8n:1.97.0
     restart: unless-stopped
     ports:
       - ${APP_PORT}:5678
@@ -23,6 +23,8 @@ services:
     links:
       - n8n-db
     depends_on:
+      n8n-init:
+        condition: service_completed_successfully
       n8n-db:
         condition: service_healthy
     labels:
@@ -46,10 +48,9 @@ services:
       traefik.http.routers.n8n-local.service: n8n
       traefik.http.routers.n8n-local.tls: true
       runtipi.managed: true
-
   n8n-db:
     container_name: n8n-db
-    image: postgres:16-alpine
+    image: postgres:11
     restart: unless-stopped
     networks:
       - tipi_main_network
@@ -71,7 +72,13 @@ services:
       retries: 10
     labels:
       runtipi.managed: true
-
-networks:
-  tipi_main_network:
-    external: true
+  n8n-init:
+    image: bash:5.2.37
+    command:
+      - sh
+      - '-c'
+      - chown -R 1000:1000 /home/node/.n8n
+    volumes:
+      - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
+    labels:
+      runtipi.managed: true
