--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  n8n-1:
-    container_name: n8n-1
-    image: n8nio/n8n:1.97.0
+  n8n:
+    container_name: n8n
+    image: n8nio/n8n:latest
     restart: unless-stopped
     ports:
       - ${APP_PORT}:5678
@@ -50,7 +50,7 @@ services:
       runtipi.managed: true
   n8n-db:
     container_name: n8n-db
-    image: postgres:11
+    image: postgres:16-alpine
     restart: unless-stopped
     networks:
       - tipi_main_network
@@ -73,7 +73,7 @@ services:
     labels:
       runtipi.managed: true
   n8n-init:
-    image: bash:5.2.37
+    image: bash:5.2-alpine3.20
     command:
       - sh
       - '-c'
