--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   n8n:
     container_name: n8n
-    image: n8nio/n8n:latest
+    image: docker.n8n.io/n8nio/n8n:latest
     restart: unless-stopped
     ports:
       - ${APP_PORT}:5678
@@ -73,7 +73,7 @@ services:
     labels:
       runtipi.managed: true
   n8n-init:
-    image: bash:5.2-alpine3.20
+    image: alpine:3.20
     command:
       - sh
       - '-c'
